sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:16: error: '<-' expected but '=' found.
     for(i = 0 ; i < sizeOfTheCollection - 1 ; i++)
           ^AlgSelectionSort:16: error: illegal start of simple expression
     for(i = 0 ; i < sizeOfTheCollection - 1 ; i++)
               ^AlgSelectionSort:16: error: '<-' expected but ';' found.
     for(i = 0 ; i < sizeOfTheCollection - 1 ; i++)
                                             ^AlgSelectionSort:16: error: illegal start of simple pattern
     for(i = 0 ; i < sizeOfTheCollection - 1 ; i++)
                                                  ^AlgSelectionSort:30: error: illegal start of simple expression
 }
 ^