sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var longueur:Int = getNombreValeurs() - 1
	for(i <- 0 to longueur) {
    var min:Int = i;
  
  	for(j <- i + 1 to longueur) {
    	if(getValeur(j) < getValeur(min))
    		min = j;
    }
    echange(i, min)
  }
}

def selectionSort() {
     for(i = 0 ; i < sizeOfTheCollection - 1 ; i++)
     {
         min = i;
         for(j = i+1 ; j < sizeOfTheCollection; j++)
              if(t[j] < t[min])
                  min = j;
         if(min != i)
         {
             x = t[i];
             t[i] = t[min];
             t[min] = x;
         }
     }

 }
